small refactors based on warnings